tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_visibility_errors_if_type_alias_aliases_more_private_type/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Foo` is more private than item `Bar`
  ┌─ src/main.nr:3:20
  │
3 │     pub type Bar = Foo;
  │                    ---
  │

Aborting due to 1 previous error
